separating the calculation engine from the execution jupyter framework

--- a/Enova-Function.ipynb
+++ b/Enova-Function.ipynb
@@ -9,35 +9,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Output"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt"
+    "#Energipost, Levertenergi[kWh/år]\n",
+    "Romoppvarming_ = 11810\n",
+    "Ventilasjonsvarme_ = 236\n",
+    "Varmtvann_ = 6000\n",
+    "Vifter_ = 1460\n",
+    "Pumper_ = 43\n",
+    "Belysning_ = 3400\n",
+    "Teknisk_utstyr_ = 4600\n",
+    "Kjoeling_ = 0\n",
+    "Totalt_netto_energibehov_ = 27549\n",
+    "\n",
+    "#Energivare, Levertenergi[kWh/år]\n",
+    "Elektrisitet_ = 15965          # - Energivare - Elektrisitet\n",
+    "Olje_ = 11238                  # - Energivare - Olje\n",
+    "Gass_ = 2387                   # - Energivare - Gass\n",
+    "Fjernvarme_ = 4199             # - Energivare - Fjernvarme\n",
+    "Biobrensel_ = 0                # - Energivare - Biobrensel\n",
+    "Annen_energivare_ = 0          # - Energivare - Annen_energivare\n",
+    "Totalt_levert_energi_ = 33789  # - Energivare - Totalt\n",
+    "\n",
+    "if 0:\n",
+    "    #Energivare, Primærenergibehov[kWh/år]\n",
+    "    Elektrisitet = 23947\n",
+    "    Olje = 15171\n",
+    "    Gass = 3247\n",
+    "    Fjernvarme = 5248\n",
+    "    Biobrensel = 0\n",
+    "    Annenenergivare = 0\n",
+    "    Totalt =  Elektrisitet+Olje+Gass+Fjernvarme+Biobrensel+Annenenergivare\n",
+    "\n",
+    "    #Referanse,TekniskveiledningtilTEK = §8-21Tabell1:Beregnetårlignettoenergibehov(kWh/m²oppvarmetBRA) \n",
+    "    #Småhus:\n",
+    "    Romoppvarming = 51\n",
+    "    Oppvarmingavventilasjonsluft = 6\n",
+    "    Vannoppvarming = 30\n",
+    "    Vifterogpumper = 8\n",
+    "    Belysning = 17\n",
+    "    Tekniskutstyr = 23\n",
+    "    Romkjøling = 0\n",
+    "    Kjølebatterier = 0\n",
+    "    Sumnettoenergibehov = 136\n",
+    "    Avrundetenergiramme = 133"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Leveranse"
+    "## Input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Romoppvarming: 11810, Ventilasjonsvarme: 236, Varmtvann: 6000.0, Vifter: 1460.0, Pumper: 43, Belysning: 3400.0, Teknisk_utstyr: 4600.0, Kjoeling: 0, Totalt_netto_energibehov: 27549.0, Totalt_netto_energibehov: 27549.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import EnergiBeregning as calc\n",
     "if __name__ == \"__main__\":\n",
@@ -444,12 +483,95 @@
     "    BygningskategoriErForretningsbygg = 0, # Nima Darabi: OBS! finnes ikke i input? (1 = Forretningsbygg, 0 = Bolig)\n",
     "    REF = 123456789 # Nima Darabi: OBS! Hva er verdi for #REF! i Q88\n",
     "        )\n",
-    "    print(calcEngine.calculate())"
+    "\n",
+    "    Output = calcEngine.calculate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "energipost - 1 ✓\n",
+      "energipost - 1b ✓\n",
+      "energipost - 1 ✓\n",
+      "energipost - 2 ✓\n",
+      "energipost - 3a ✓\n",
+      "energipost - 3b ✓\n",
+      "energipost - 3 ✓\n",
+      "energipost - 4 ✓\n",
+      "energipost - 5 ✓\n",
+      "energipost - 6 ✓\n",
+      "energipost - Totalt ✓\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = ['✓', 'ERROR']\n",
+    "\n",
+    "Romoppvarming = Output.Romoppvarming\n",
+    "Romoppvarming = Output.Romoppvarming\n",
+    "Ventilasjonsvarme = Output.Ventilasjonsvarme\n",
+    "Varmtvann = Output.Varmtvann\n",
+    "Pumper = Output.Pumper\n",
+    "Vifter = Output.Vifter\n",
+    "Belysning = Output.Belysning\n",
+    "Teknisk_utstyr = Output.Teknisk_utstyr\n",
+    "Kjoeling = Output.Kjoeling\n",
+    "\n",
+    "Totalt_netto_energibehov = Romoppvarming+Ventilasjonsvarme +\\\n",
+    "                           Varmtvann+\\\n",
+    "                           Vifter+Pumper+\\\n",
+    "                           Belysning+\\\n",
+    "                           Teknisk_utstyr+\\\n",
+    "                           Kjoeling\n",
+    "\n",
+    "testlist = [(Romoppvarming - Romoppvarming_, 'energipost - 1'),\\\n",
+    "            (Ventilasjonsvarme - Ventilasjonsvarme_, 'energipost - 1b'),\\\n",
+    "            (Romoppvarming+Ventilasjonsvarme - (Romoppvarming_+Ventilasjonsvarme_), 'energipost - 1'),\\\n",
+    "            (Varmtvann - Varmtvann_, 'energipost - 2'   ),\\\n",
+    "            (Vifter - Vifter_, 'energipost - 3a'),\\\n",
+    "            (Pumper - Pumper_, 'energipost - 3b'),\\\n",
+    "            (Vifter+Pumper - (Vifter_+Pumper_), 'energipost - 3'),\\\n",
+    "            (Belysning - Belysning_, 'energipost - 4'),\\\n",
+    "            (Teknisk_utstyr - Teknisk_utstyr_, 'energipost - 5'),\\\n",
+    "            (Kjoeling - Kjoeling_, 'energipost - 6'),\\\n",
+    "            (Totalt_netto_energibehov - Totalt_netto_energibehov_, 'energipost - Totalt'),\\\n",
+    "           \n",
+    "#            (Elektrisitet - Elektrisitet_, 'energivare - 1'),\\\n",
+    "#            (Olje - Olje_, 'energivare - 2'),\\\n",
+    "#            (Gass - Gass_, 'energivare - 3'),\\\n",
+    "#            (Fjernvarme - Fjernvarme_, 'energivare - 4'),\\\n",
+    "#            (Biobrensel - Biobrensel_, 'energivare - 5'),\\\n",
+    "#            (Annen_energivare - Annen_energivare_, 'energivare - 6'),\\\n",
+    "#            (Totalt_levert_energi - Totalt_levert_energi_, 'energivare -Totalt'),\\\n",
+    "           ]\n",
+    "\n",
+    "for i in testlist:\n",
+    "    print (i[1], message[int(round(i[0]))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
