Adding energivare variables to the framework, only elektrisitet (1) works

--- a/Enova-Function.ipynb
+++ b/Enova-Function.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,20 +49,7 @@
     "    Fjernvarme = 5248\n",
     "    Biobrensel = 0\n",
     "    Annenenergivare = 0\n",
-    "    Totalt =  Elektrisitet+Olje+Gass+Fjernvarme+Biobrensel+Annenenergivare\n",
-    "\n",
-    "    #Referanse,TekniskveiledningtilTEK = §8-21Tabell1:Beregnetårlignettoenergibehov(kWh/m²oppvarmetBRA) \n",
-    "    #Småhus:\n",
-    "    Romoppvarming = 51\n",
-    "    Oppvarmingavventilasjonsluft = 6\n",
-    "    Vannoppvarming = 30\n",
-    "    Vifterogpumper = 8\n",
-    "    Belysning = 17\n",
-    "    Tekniskutstyr = 23\n",
-    "    Romkjøling = 0\n",
-    "    Kjølebatterier = 0\n",
-    "    Sumnettoenergibehov = 136\n",
-    "    Avrundetenergiramme = 133"
+    "    Totalt =  Elektrisitet+Olje+Gass+Fjernvarme+Biobrensel+Annenenergivare\n"
    ]
   },
   {
@@ -74,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,13 +475,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -503,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +508,6 @@
     "message = ['✓', 'ERROR']\n",
     "\n",
     "Romoppvarming = Output.Romoppvarming\n",
-    "Romoppvarming = Output.Romoppvarming\n",
     "Ventilasjonsvarme = Output.Ventilasjonsvarme\n",
     "Varmtvann = Output.Varmtvann\n",
     "Pumper = Output.Pumper\n",
@@ -536,13 +515,16 @@
     "Belysning = Output.Belysning\n",
     "Teknisk_utstyr = Output.Teknisk_utstyr\n",
     "Kjoeling = Output.Kjoeling\n",
+    "Totalt_netto_energibehov = Output.Totalt_netto_energibehov\n",
     "\n",
-    "Totalt_netto_energibehov = Romoppvarming+Ventilasjonsvarme +\\\n",
-    "                           Varmtvann+\\\n",
-    "                           Vifter+Pumper+\\\n",
-    "                           Belysning+\\\n",
-    "                           Teknisk_utstyr+\\\n",
-    "                           Kjoeling\n",
+    "if 0: \n",
+    "    Elektrisitet = Output.Elektrisitet\n",
+    "    Olje = Output.Olje\n",
+    "    Gass = Output.Gass\n",
+    "    Fjernvarme = Output.Fjernvarme\n",
+    "    Biobrensel = Output.Biobrensel\n",
+    "    Annen_energivare = Output.Annen_energivare\n",
+    "    Totalt_levert_energi = Output.Totalt_levert_energi\n",
     "\n",
     "testlist = [(Romoppvarming - Romoppvarming_, 'energipost - 1'),\\\n",
     "            (Ventilasjonsvarme - Ventilasjonsvarme_, 'energipost - 1b'),\\\n",
