--- a/Enova-Function.ipynb
+++ b/Enova-Function.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,6 +475,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Output(Romoppvarming=11809.982403138307, Ventilasjonsvarme=235.7062500427955, Varmtvann=6000.0, Vifter=1460.0, Pumper=43.254151421121136, Belysning=3400.0, Teknisk_utstyr=4600.0, Kjoeling=0.0, Totalt_netto_energibehov=27548.942804602226, Elektrisitet=15964.999883505185, Olje=11237.503797221823, Gass=2387.298027227534, Fjernvarme=2387.298027227534, Biobrensel=2387.298027227534, Annen_energivare=0.0, Totalt_levert_energi=34364.39776240961)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calcEngine.calculate()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -483,24 +503,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "energipost - 1 ✓\n",
-      "energipost - 1b ✓\n",
-      "energipost - 1 ✓\n",
-      "energipost - 2 ✓\n",
-      "energipost - 3a ✓\n",
-      "energipost - 3b ✓\n",
-      "energipost - 3 ✓\n",
-      "energipost - 4 ✓\n",
-      "energipost - 5 ✓\n",
-      "energipost - 6 ✓\n",
-      "energipost - Totalt ✓\n"
+      "11809.982403138307 Romoppvarming\n",
+      "235.7062500427955 Ventilasjonsvarme\n",
+      "12045.688653181101 Oppvarming\n",
+      "6000.0 Varmtvann\n",
+      "1460.0 Vifter\n",
+      "43.254151421121136 Pumper\n",
+      "1503.2541514211212 Vifter og Pumper\n",
+      "3400.0 Belysning\n",
+      "4600.0 Teknisk_utstyr\n",
+      "0.0 Kjoeling\n",
+      "27548.942804602226 Totalt_netto_energibehov\n",
+      "15964.999883505185 Elektrisitet\n",
+      "11237.503797221823 Olje\n",
+      "2387.298027227534 Gass\n",
+      "2387.298027227534 Fjernvarme\n",
+      "2387.298027227534 Biobrensel\n",
+      "0.0 Annen_energivare\n",
+      "34364.39776240961 Totalt_levert_energi\n"
      ]
     }
    ],
@@ -517,39 +544,100 @@
     "Kjoeling = Output.Kjoeling\n",
     "Totalt_netto_energibehov = Output.Totalt_netto_energibehov\n",
     "\n",
-    "if 0: \n",
-    "    Elektrisitet = Output.Elektrisitet\n",
-    "    Olje = Output.Olje\n",
-    "    Gass = Output.Gass\n",
-    "    Fjernvarme = Output.Fjernvarme\n",
-    "    Biobrensel = Output.Biobrensel\n",
-    "    Annen_energivare = Output.Annen_energivare\n",
-    "    Totalt_levert_energi = Output.Totalt_levert_energi\n",
+    "Elektrisitet = Output.Elektrisitet\n",
+    "Olje = Output.Olje\n",
+    "Gass = Output.Gass\n",
+    "Fjernvarme = Output.Fjernvarme\n",
+    "Biobrensel = Output.Biobrensel\n",
+    "Annen_energivare = Output.Annen_energivare\n",
+    "Totalt_levert_energi = Output.Totalt_levert_energi\n",
     "\n",
-    "testlist = [(Romoppvarming - Romoppvarming_, 'energipost - 1'),\\\n",
-    "            (Ventilasjonsvarme - Ventilasjonsvarme_, 'energipost - 1b'),\\\n",
-    "            (Romoppvarming+Ventilasjonsvarme - (Romoppvarming_+Ventilasjonsvarme_), 'energipost - 1'),\\\n",
-    "            (Varmtvann - Varmtvann_, 'energipost - 2'   ),\\\n",
-    "            (Vifter - Vifter_, 'energipost - 3a'),\\\n",
-    "            (Pumper - Pumper_, 'energipost - 3b'),\\\n",
-    "            (Vifter+Pumper - (Vifter_+Pumper_), 'energipost - 3'),\\\n",
-    "            (Belysning - Belysning_, 'energipost - 4'),\\\n",
-    "            (Teknisk_utstyr - Teknisk_utstyr_, 'energipost - 5'),\\\n",
-    "            (Kjoeling - Kjoeling_, 'energipost - 6'),\\\n",
-    "            (Totalt_netto_energibehov - Totalt_netto_energibehov_, 'energipost - Totalt'),\\\n",
+    "testlist = [(Romoppvarming , Romoppvarming_, 'energipost - 1', 'Romoppvarming'),\\\n",
+    "            (Ventilasjonsvarme , Ventilasjonsvarme_, 'energipost - 1b', 'Ventilasjonsvarme'),\\\n",
+    "            (Romoppvarming+Ventilasjonsvarme , (Romoppvarming_+Ventilasjonsvarme_), 'energipost - 1', 'Oppvarming'),\\\n",
+    "            (Varmtvann , Varmtvann_, 'energipost - 2', 'Varmtvann'   ),\\\n",
+    "            (Vifter , Vifter_, 'energipost - 3a', 'Vifter'),\\\n",
+    "            (Pumper , Pumper_, 'energipost - 3b', 'Pumper'),\\\n",
+    "            (Vifter+Pumper , (Vifter_+Pumper_), 'energipost - 3', 'Vifter og Pumper'),\\\n",
+    "            (Belysning , Belysning_, 'energipost - 4', 'Belysning'),\\\n",
+    "            (Teknisk_utstyr , Teknisk_utstyr_, 'energipost - 5', 'Teknisk_utstyr'),\\\n",
+    "            (Kjoeling , Kjoeling_, 'energipost - 6', 'Kjoeling'),\\\n",
+    "            (Totalt_netto_energibehov , Totalt_netto_energibehov_, 'energipost - Totalt', 'Totalt_netto_energibehov'),\\\n",
     "           \n",
-    "#            (Elektrisitet - Elektrisitet_, 'energivare - 1'),\\\n",
-    "#            (Olje - Olje_, 'energivare - 2'),\\\n",
-    "#            (Gass - Gass_, 'energivare - 3'),\\\n",
-    "#            (Fjernvarme - Fjernvarme_, 'energivare - 4'),\\\n",
-    "#            (Biobrensel - Biobrensel_, 'energivare - 5'),\\\n",
-    "#            (Annen_energivare - Annen_energivare_, 'energivare - 6'),\\\n",
-    "#            (Totalt_levert_energi - Totalt_levert_energi_, 'energivare -Totalt'),\\\n",
+    "            (Elektrisitet , Elektrisitet_, 'energivare - 1', 'Elektrisitet'),\\\n",
+    "            (Olje , Olje_, 'energivare - 2', 'Olje'),\\\n",
+    "            (Gass , Gass_, 'energivare - 3', 'Gass'),\\\n",
+    "            (Fjernvarme , Fjernvarme_, 'energivare - 4', 'Fjernvarme'),\\\n",
+    "            (Biobrensel , Biobrensel_, 'energivare - 5', 'Biobrensel'),\\\n",
+    "            (Annen_energivare , Annen_energivare_, 'energivare - 6', 'Annen_energivare'),\\\n",
+    "            (Totalt_levert_energi , Totalt_levert_energi_, 'energivare -Totalt', 'Totalt_levert_energi'),\\\n",
     "           ]\n",
     "\n",
     "for i in testlist:\n",
-    "    print (i[1], message[int(round(i[0]))])"
+    "    #print (i[2], ': ', i[0], i[1], message[abs(i[0]-i[1])>1], i[3])\n",
+    "    print (i[0], i[3])    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".F.F......F....\n",
+      "======================================================================\n",
+      "FAIL: test_biobrensel (__main__.TestCalculation)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 451, in test_biobrensel\n",
+      "    self.assertEqual(0, calc_result.Biobrensel)  # add assertion here\n",
+      "AssertionError: 0 != 2387.298027227534\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_fjernvarmet (__main__.TestCalculation)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 448, in test_fjernvarmet\n",
+      "    self.assertEqual(4199, calc_result.Fjernvarme)  # add assertion here\n",
+      "AssertionError: 4199 != 2387.298027227534\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_totalt_levert_energi (__main__.TestCalculation)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 457, in test_totalt_levert_energi\n",
+      "    self.assertEqual(33789, round(calc_result.Totalt_levert_energi))  # add assertion here\n",
+      "AssertionError: 33789 != 34364.0\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 15 tests in 0.028s\n",
+      "\n",
+      "FAILED (failures=3)\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "True",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m True\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run -i './test_EnergiBeregning.py'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
