Adding Graph Visulization

--- a/Enova-Function.ipynb
+++ b/Enova-Function.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "Output(Romoppvarming=11809.982403138307, Ventilasjonsvarme=235.7062500427955, Varmtvann=6000.0, Vifter=1460.0, Pumper=43.254151421121136, Belysning=3400.0, Teknisk_utstyr=4600.0, Kjoeling=0.0, Totalt_netto_energibehov=27548.942804602226, Elektrisitet=15964.999883505185, Olje=11237.503797221823, Gass=2387.298027227534, Fjernvarme=2387.298027227534, Biobrensel=2387.298027227534, Annen_energivare=0.0, Totalt_levert_energi=34364.39776240961)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,31 +503,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11809.982403138307 Romoppvarming\n",
-      "235.7062500427955 Ventilasjonsvarme\n",
-      "12045.688653181101 Oppvarming\n",
-      "6000.0 Varmtvann\n",
-      "1460.0 Vifter\n",
-      "43.254151421121136 Pumper\n",
-      "1503.2541514211212 Vifter og Pumper\n",
-      "3400.0 Belysning\n",
-      "4600.0 Teknisk_utstyr\n",
-      "0.0 Kjoeling\n",
-      "27548.942804602226 Totalt_netto_energibehov\n",
-      "15964.999883505185 Elektrisitet\n",
-      "11237.503797221823 Olje\n",
-      "2387.298027227534 Gass\n",
-      "2387.298027227534 Fjernvarme\n",
-      "2387.298027227534 Biobrensel\n",
-      "0.0 Annen_energivare\n",
-      "34364.39776240961 Totalt_levert_energi\n"
+      "energipost - 1 :  11809.982403138307 11810 ✓ Romoppvarming\n",
+      "energipost - 1b :  235.7062500427955 236 ✓ Ventilasjonsvarme\n",
+      "energipost - 1 :  12045.688653181101 12046 ✓ Oppvarming\n",
+      "energipost - 2 :  6000.0 6000 ✓ Varmtvann\n",
+      "energipost - 3a :  1460.0 1460 ✓ Vifter\n",
+      "energipost - 3b :  43.254151421121136 43 ✓ Pumper\n",
+      "energipost - 3 :  1503.2541514211212 1503 ✓ Vifter og Pumper\n",
+      "energipost - 4 :  3400.0 3400 ✓ Belysning\n",
+      "energipost - 5 :  4600.0 4600 ✓ Teknisk_utstyr\n",
+      "energipost - 6 :  0.0 0 ✓ Kjoeling\n",
+      "energipost - Totalt :  27548.942804602226 27549 ✓ Totalt_netto_energibehov\n",
+      "energivare - 1 :  15964.999883505185 15965 ✓ Elektrisitet\n",
+      "energivare - 2 :  11237.503797221823 11238 ✓ Olje\n",
+      "energivare - 3 :  2387.298027227534 2387 ✓ Gass\n",
+      "energivare - 4 :  2387.298027227534 4199 ERROR Fjernvarme\n",
+      "energivare - 5 :  2387.298027227534 0 ERROR Biobrensel\n",
+      "energivare - 6 :  0.0 0 ✓ Annen_energivare\n",
+      "energivare -Totalt :  34364.39776240961 33789 ERROR Totalt_levert_energi\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "./test_EnergiBeregning.py:43: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  faseforskjell_utetemp_varmetap=2.0,\n"
      ]
     }
    ],
@@ -574,13 +582,12 @@
     "           ]\n",
     "\n",
     "for i in testlist:\n",
-    "    #print (i[2], ': ', i[0], i[1], message[abs(i[0]-i[1])>1], i[3])\n",
-    "    print (i[0], i[3])    "
+    "    print (i[2], ': ', i[0], i[1], message[abs(i[0]-i[1])>1], i[3]) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +599,7 @@
       "FAIL: test_biobrensel (__main__.TestCalculation)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 451, in test_biobrensel\n",
+      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 452, in test_biobrensel\n",
       "    self.assertEqual(0, calc_result.Biobrensel)  # add assertion here\n",
       "AssertionError: 0 != 2387.298027227534\n",
       "\n",
@@ -600,7 +607,7 @@
       "FAIL: test_fjernvarmet (__main__.TestCalculation)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 448, in test_fjernvarmet\n",
+      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 449, in test_fjernvarmet\n",
       "    self.assertEqual(4199, calc_result.Fjernvarme)  # add assertion here\n",
       "AssertionError: 4199 != 2387.298027227534\n",
       "\n",
@@ -608,12 +615,12 @@
       "FAIL: test_totalt_levert_energi (__main__.TestCalculation)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 457, in test_totalt_levert_energi\n",
+      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 458, in test_totalt_levert_energi\n",
       "    self.assertEqual(33789, round(calc_result.Totalt_levert_energi))  # add assertion here\n",
       "AssertionError: 33789 != 34364.0\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 15 tests in 0.028s\n",
+      "Ran 15 tests in 0.026s\n",
       "\n",
       "FAILED (failures=3)\n"
      ]
