--- a/Enova-Function.ipynb
+++ b/Enova-Function.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,16 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Output(Romoppvarming=11809.982403138307, Ventilasjonsvarme=235.7062500427955, Varmtvann=6000.0, Vifter=1460.0, Pumper=43.254151421121136, Belysning=3400.0, Teknisk_utstyr=4600.0, Kjoeling=0.0, Totalt_netto_energibehov=27548.942804602226, Elektrisitet=15964.999883505185, Olje=11237.503797221823, Gass=2387.298027227534, Fjernvarme=2387.298027227534, Biobrensel=2387.298027227534, Annen_energivare=0.0, Totalt_levert_energi=34364.39776240961)"
-      ]
+      "text/plain": "Output(Romoppvarming=11809.982403138307, Ventilasjonsvarme=235.7062500427955, Varmtvann=6000.0, Vifter=1460.0, Pumper=43.254151421121136, Belysning=3400.0, Teknisk_utstyr=4600.0, Kjoeling=0.0, Totalt_netto_energibehov=27548.942804602226, Elektrisitet=15964.999883505185, Olje=11237.503797221823, Gass=2387.298027227534, Fjernvarme=4198.733907814936, Biobrensel=0.0, Annen_energivare=0.0, Totalt_levert_energi=33788.53561576948)"
      },
-     "execution_count": 122,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -524,18 +522,18 @@
       "energivare - 1 :  15964.999883505185 15965 ✓ Elektrisitet\n",
       "energivare - 2 :  11237.503797221823 11238 ✓ Olje\n",
       "energivare - 3 :  2387.298027227534 2387 ✓ Gass\n",
-      "energivare - 4 :  2387.298027227534 4199 ERROR Fjernvarme\n",
-      "energivare - 5 :  2387.298027227534 0 ERROR Biobrensel\n",
+      "energivare - 4 :  4198.733907814936 4199 ✓ Fjernvarme\n",
+      "energivare - 5 :  0.0 0 ✓ Biobrensel\n",
       "energivare - 6 :  0.0 0 ✓ Annen_energivare\n",
-      "energivare -Totalt :  34364.39776240961 33789 ERROR Totalt_levert_energi\n"
+      "energivare -Totalt :  33788.53561576948 33789 ✓ Totalt_levert_energi\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "./test_EnergiBeregning.py:43: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  faseforskjell_utetemp_varmetap=2.0,\n"
+      "/var/folders/5n/6lzk96qn743492g438006_xc0000gn/T/ipykernel_40094/218004851.py:43: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  print (i[2], ': ', i[0], i[1], message[abs(i[0]-i[1])>1], i[3])\n"
      ]
     }
    ],
@@ -587,51 +585,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      ".F.F......F....\n",
-      "======================================================================\n",
-      "FAIL: test_biobrensel (__main__.TestCalculation)\n",
+      "...............\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 452, in test_biobrensel\n",
-      "    self.assertEqual(0, calc_result.Biobrensel)  # add assertion here\n",
-      "AssertionError: 0 != 2387.298027227534\n",
+      "Ran 15 tests in 0.013s\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: test_fjernvarmet (__main__.TestCalculation)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 449, in test_fjernvarmet\n",
-      "    self.assertEqual(4199, calc_result.Fjernvarme)  # add assertion here\n",
-      "AssertionError: 4199 != 2387.298027227534\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_totalt_levert_energi (__main__.TestCalculation)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 458, in test_totalt_levert_energi\n",
-      "    self.assertEqual(33789, round(calc_result.Totalt_levert_energi))  # add assertion here\n",
-      "AssertionError: 33789 != 34364.0\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 15 tests in 0.026s\n",
-      "\n",
-      "FAILED (failures=3)\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "True",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m True\n"
+      "OK\n"
      ]
     }
    ],
@@ -641,14 +606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": []
