Fix typo equation primear...

--- a/Enova-Function.ipynb
+++ b/Enova-Function.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Enova EMS_Beregningskjerne (Produksjon)\n",
-    "Nima Darabi - Webstep - July & August 2021\n"
+    "Nima Darabi - Webstep - 2021.07-09\n"
    ]
   },
   {
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "Totalt_levert_energi_ = 33789  # - Energivare - Totalt\n",
     "\n",
     "#Energivare, Primærenergibehov - CO2-utslipp, Energi-kostnader, Energi-politisk\n",
-    "Primaerenergi_ = 23666\n",
+    "Primaerenergi_ = 47613\n",
     "CO2_utslipp_ = 9989\n",
     "Energi_kostnader_ = 26986\n",
     "Energi_politisk_ = 43526"
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Romoppvarming: 11809.982403138307,Ventilasjonsvarme: 235.7062500427955, \t\tVarmtvann: 6000.0, Vifter: 1460.0, \t\tPumper: 43.254151421121136, Belysning: 3400.0, \t\tTeknisk_utstyr: 4600.0, Kjoeling: 0.0, \t\tTotalt_netto_energibehov: 27548.942804602226, \t\tElektrisitet: 15964.999883505185, \t\tOlje: 11237.503797221823, \t\tGass: 2387.298027227534, \t\tFjernvarme: 4198.733907814936, \t\tBiobrensel: 0.0,\t\tAnnen_energivare: 0.0, \t\tTotalt_levert_energi: 33788.53561576948,        Primaerenergi: 68314.04716153369,        CO2_utslipp: 9988.554864328298,        Energi_kostnader: 26985.530494022656,        Energi_politisk: 43526.413594640435\n"
+      "Romoppvarming: 11809.982403138307,Ventilasjonsvarme: 235.7062500427955, \t\tVarmtvann: 6000.0, Vifter: 1460.0, \t\tPumper: 43.254151421121136, Belysning: 3400.0, \t\tTeknisk_utstyr: 4600.0, Kjoeling: 0.0, \t\tTotalt_netto_energibehov: 27548.942804602226, \t\tElektrisitet: 15964.999883505185, \t\tOlje: 11237.503797221823, \t\tGass: 2387.298027227534, \t\tFjernvarme: 4198.733907814936, \t\tBiobrensel: 0.0,\t\tAnnen_energivare: 0.0, \t\tTotalt_levert_energi: 33788.53561576948,        Primaerenergi: 47613.27265330536,        CO2_utslipp: 9988.554864328298,        Energi_kostnader: 26985.530494022656\n"
      ]
     }
    ],
@@ -473,26 +473,7 @@
     ")\n",
     "\n",
     "Output = calcEngine.calculate()\n",
-    "\n",
     "print (Output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Output(Romoppvarming=11809.982403138307, Ventilasjonsvarme=235.7062500427955, Varmtvann=6000.0, Vifter=1460.0, Pumper=43.254151421121136, Belysning=3400.0, Teknisk_utstyr=4600.0, Kjoeling=0.0, Totalt_netto_energibehov=27548.942804602226, Elektrisitet=15964.999883505185, Olje=11237.503797221823, Gass=2387.298027227534, Fjernvarme=4198.733907814936, Biobrensel=0.0, Annen_energivare=0.0, Totalt_levert_energi=33788.53561576948, Primaerenergi=68314.04716153369, CO2_utslipp=9988.554864328298, Energi_kostnader=26985.530494022656, Energi_politisk=43526.413594640435)"
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calcEngine.calculate()"
    ]
   },
   {
@@ -504,43 +485,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "energipost - 1 :  11809.982403138307 11810 ✓ Romoppvarming\n",
-      "energipost - 1b :  235.7062500427955 236 ✓ Ventilasjonsvarme\n",
-      "energipost - 1 :  12045.688653181101 12046 ✓ Oppvarming\n",
-      "energipost - 2 :  6000.0 6000 ✓ Varmtvann\n",
-      "energipost - 3a :  1460.0 1460 ✓ Vifter\n",
-      "energipost - 3b :  43.254151421121136 43 ✓ Pumper\n",
-      "energipost - 3 :  1503.2541514211212 1503 ✓ Vifter og Pumper\n",
-      "energipost - 4 :  3400.0 3400 ✓ Belysning\n",
-      "energipost - 5 :  4600.0 4600 ✓ Teknisk_utstyr\n",
-      "energipost - 6 :  0.0 0 ✓ Kjoeling\n",
-      "energipost - Totalt :  27548.942804602226 27549 ✓ Totalt_netto_energibehov\n",
-      "energivare - 1 :  15964.999883505185 15965 ✓ Elektrisitet\n",
-      "energivare - 2 :  11237.503797221823 11238 ✓ Olje\n",
-      "energivare - 3 :  2387.298027227534 2387 ✓ Gass\n",
-      "energivare - 4 :  4198.733907814936 4199 ✓ Fjernvarme\n",
-      "energivare - 5 :  0.0 0 ✓ Biobrensel\n",
-      "energivare - 6 :  0.0 0 ✓ Annen_energivare\n",
-      "energivare -Totalt :  33788.53561576948 33789 ✓ Totalt_levert_energi\n",
-      "Total - 1 :  68314.04716153369 23666 ERROR Primearenergi\n",
-      "Total - 2 :  9988.554864328298 9989 ✓ CO2_utslipp\n",
-      "Total - 3 :  26985.530494022656 26986 ✓ Energi kostnader\n",
-      "Total - 4 :  43526.413594640435 43526 ✓ Energi politisk\n"
+      "Romoppvarming :  11809.982403138307 11810 ✓ Romoppvarming\n",
+      "Ventilasjonsvarme :  235.7062500427955 236 ✓ Ventilasjonsvarme\n",
+      "Oppvarming :  12045.688653181101 12046 ✓ Oppvarming\n",
+      "Varmtvann :  6000.0 6000 ✓ Varmtvann\n",
+      "Vifter :  1460.0 1460 ✓ Vifter\n",
+      "Pumper :  43.254151421121136 43 ✓ Pumper\n",
+      "Vifter og Pumper :  1503.2541514211212 1503 ✓ Vifter og Pumper\n",
+      "Belysning :  3400.0 3400 ✓ Belysning\n",
+      "Teknisk_utstyr :  4600.0 4600 ✓ Teknisk_utstyr\n",
+      "Kjoeling :  0.0 0 ✓ Kjoeling\n",
+      "Totalt_netto_energibehov :  27548.942804602226 27549 ✓ Totalt_netto_energibehov\n",
+      "Elektrisitet :  15964.999883505185 15965 ✓ Elektrisitet\n",
+      "Olje :  11237.503797221823 11238 ✓ Olje\n",
+      "Gass :  2387.298027227534 2387 ✓ Gass\n",
+      "Fjernvarme :  4198.733907814936 4199 ✓ Fjernvarme\n",
+      "Biobrensel :  0.0 0 ✓ Biobrensel\n",
+      "Annen_energivare :  0.0 0 ✓ Annen_energivare\n",
+      "Totalt_levert_energi :  33788.53561576948 33789 ✓ Totalt_levert_energi\n",
+      "Primearenergi :  47613.27265330536 47613 ✓ Primearenergi\n",
+      "CO2_utslipp :  9988.554864328298 9989 ✓ CO2_utslipp\n",
+      "Energi kostnader :  26985.530494022656 26986 ✓ Energi kostnader\n",
+      "Energi politisk :  43526.413594640435 43526 ✓ Energi politisk\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5n/6lzk96qn743492g438006_xc0000gn/T/ipykernel_45333/1316919008.py:53: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
-      "  print (i[2], ': ', i[0], i[1], message[abs(i[0]-i[1])>1], i[3])\n"
+      "/var/folders/5n/6lzk96qn743492g438006_xc0000gn/T/ipykernel_46452/529114705.py:53: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+      "  print (i[3], ': ', i[0], i[1], message[abs(i[0]-i[1])>1], i[3])\n"
      ]
     }
    ],
@@ -597,12 +578,12 @@
     "           ]\n",
     "\n",
     "for i in testlist:\n",
-    "    print (i[2], ': ', i[0], i[1], message[abs(i[0]-i[1])>1], i[3]) "
+    "    print (i[3], ': ', i[0], i[1], message[abs(i[0]-i[1])>1], i[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -613,28 +594,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "..........E........\n",
-      "======================================================================\n",
-      "ERROR: test_priaerenergi (__main__.TestCalculation)\n",
+      "...................\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/nimadarabi/Desktop/Projects/Enova/Energimerkeordningen/test_EnergiBeregning.py\", line 460, in test_priaerenergi\n",
-      "    self.assertEqual(23666, round(calc_result.Priaerenergi))  # add assertion here\n",
-      "AttributeError: 'Output' object has no attribute 'Priaerenergi'\n",
+      "Ran 19 tests in 0.041s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 19 tests in 0.027s\n",
-      "\n",
-      "FAILED (errors=1)\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "True",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001B[0;31mSystemExit\u001B[0m\u001B[0;31m:\u001B[0m True\n"
+      "OK\n"
      ]
     }
    ],
